Non blank laning, Configured DB for user and wallets table, created libraries for create user and create wallet

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -18,11 +18,12 @@
 </head>
 
 <body is="dmx-app" id="main">
-  <header class="bg-light">
+  <header class="bg-light navbar-light sticky-top">
     <div class="container">
       <div class="row">
         <div class="col">
           <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+            <a class="navbar-brand disabled" href="#">VALV Whatapp Bot</a>
           </nav>
         </div>
       </div>
