--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,10 @@
 <meta name="ac:route" content="/">
 <div is="dmx-browser" id="browser1"></div>
 <main>
-    <div class="container">
+    <div class="container pt-5 pb-5 ps-2 pe-2">
         <div class="row">
-            <div class="col">
-                <button id="btnWhatsapp" class="btn text-center btn-success btn-lg" dmx-on:click="browser1.goto('https://wa.me/14155238886?text=join%20left-cheese')">Button</button>
+            <div class="col text-center">
+                <button id="btnWhatsapp" class="btn text-center btn-success btn-lg" dmx-on:click="browser1.goto('https://wa.me/14155238886?text=join%20left-cheese')">Join Valv Bot&nbsp;<i class="bi-whatsapp"></i></button>
             </div>
         </div>
     </div>
